--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "@mortvola/map-renderer",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "SaunterQuest map tile rendering service",
   "gypfile": true,
   "main": "./build/Release/rendermap",
   "types": "./render-map.d.ts",
   "license": "MIT",
+  "publishConfig": {
+    "@mortvola:registry": "https://npm.pkg.github.com"
+  },
   "dependencies": {
     "node-addon-api": "^3.0.0"
   },
